<resources>

    <string-array
        name="version_about">
        <item></item>
        <item></item>
        <item>Version 1.5: 
            Added the option to share recipes, and to import shared recipes.  To use it you can go to the Edit tab and select the share button.  Or in the menu there is a new option to Share all Menu Items.  This will then let you choose an email program or similar to use to send a file detailing the recipes.
            </item>
        <item>Version 2.0: 
            Added the option to import recipes from your favourite websites.  Either navigate to the recipe in your browser, select share, then choose Cooking Scheduler.  Or in the Cooking Scheduler menu select \'Import recipe from website\' option.  I\'ve also fixed many UI bugs for example when you rotate the screen.
            </item>
        <item>Version 3.0: 
            Revamped the UI to make it prettier and easier to use.
            </item>
		<item>Version 3.1: 
            Fixed a bug where TimePicker didn\'t work on Lollipop (Android 5.0)
            </item>
        <item>Version 3.5: 
            Added the option to export a schedule (so you could print it off) and added a What\'s New dialog on startup
            </item>
        <item>Version 3.6: 
            Updated the summary UI - added tickboxes to mark tasks as done
            </item>
        <item>Version 3.7:
            Updated to run on Nougat (Android 7.1)
            </item>
        </string-array>
    
    
    <string name="app_name">Cooking Scheduler</string>
    
    <string name="menu_settings">Settings</string>
    <string name="menu_parse_recipe">Import recipe from website</string>
    <string name="menu_about">About</string>
    <string name="menu_deselect_all">Deselect all</string>
    <string name="menu_share_all">Share all Menu Items</string>
    <string name="menu_whats_new">What\'s new?</string>
    <string name="menu_export_schedule">Export Current Schedule</string>
    
    <string name="menu_context_edit">Edit Menu Item</string>
    <string name="menu_context_delete">Delete Menu Item</string>
    <string name="menu_context_share">Share Menu Item</string>
    
    <string name="share_title">Share via:</string>
    <string name="share_subject">Cooking Scheduler recipes</string>
    
    <string name="title_activity_main">Cooking Scheduler</string>
    <string name="add_item">Create New Item</string>
    <string name="add_step">Add Step</string>
    <string name="save_item">Save Item</string>
    <string name="minutes">min</string>
    <string name="item_name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="rename">Rename</string>
    <string name="new_item_name">New Item Name</string>
    <string name="new_step">New Step</string>
    <string name="cook_tab">Cook</string>
    <string name="edit_tab">Edit</string>
    <string name="stop_cooking">Stop Cooking</string>
    <string name="choose_what_to_cook">What are you cooking?</string>
    <string name="start_cooking">Start cooking</string>
    <string name="select_items_for_start_cooking">Select some items by touching them before trying to start cooking.</string>
    <string name="select_items_for_export_schedule">Select some items by touching them before trying to export a schedule.</string>
    <string name="finish_time">Finish time:</string>
    <string name="eat">Eat</string>
    <string name="nom">Nom Nom Nom!  Enjoy!</string>
    <string name="title_activity_add_menu_item">Add Menu Item</string>
    <string name="title_activity_summary">Summary</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="move">Move</string>
    <string name="menu_items_heading">You are cooking:</string>
    <string name="steps_remaining_heading">Final steps:</string>
    <string name="current_step">Current step:</string>
    <string name="next_step">Next step will be:</string>
    <string name="reminder_text_format">%1$s: %2$s</string>
    <string name="next_step_text_format">%1$s: %2$s - %3$s</string>
    <plurals name="disabled_items_warning_text_format">
        <item quantity="one">1 item not shown because it takes too long</item>
        <item quantity="other">%1$d items not shown because they take too long</item>
    </plurals>
	<string name="sure_stop_cooking">Are you sure you want to stop cooking?</string>
	<string name="sure_cancel_add_item">Are you sure you want to discard this new item?</string>
	<string name="sure_cancel_edit_item">Are you sure you want to discard any changes to this menu item?</string>
	<string name="sure_cancel_settings">Are you sure you want to discard any changes to settings?</string>
	<string name="sure_delete_menu_item">Are you sure you want to delete %1$s?</string>
	<string name="sure_replace_menu_item">Are you sure you want to replace %1$s?</string>
	<string name="delete_menu_item">Delete</string>
	<string name="replace_menu_item">Replace</string>
	<string name="rename_menu_item_to">Save as %1$s</string>
	<string name="adding_menu_item">Adding %1$s</string>
	<string name="saving_menu_item">Saving %1$s</string>
	<string name="skipping_menu_item">Skipping %1$s</string>
	<string name="replacing_menu_item">Replacing %1$s</string>
	<string name="drag_to_reorder">Drag to reorder</string>
	<string name="edit">Edit</string>
	<string name="save">Save</string>
	<string name="edit_step_name">Instructions</string>
	<string name="edit_step_time">Time</string>
	<string name="menu_item_string_format">%1$s (%2$d mins)</string>
	<string name="to_add_steps_press_button">To add a step please press the \"Add Step\" (BUTTON) button on the Action Bar</string>
	<string name="export">Export</string>
	<string name="cooking_steps_heading">Cooking steps:</string>
	
	<string name="more_2_items_upgrade">You have selected more than 2 items to cook.  Would you like to upgrade to the premium version (which allows you to cook more than 2 items simultaneously and also to import recipes from websites?)</string>
	<string name="parsing_upgrade">You have selected to import a recipe.  Would you like to upgrade to the premium version (which allows you to import recipes from websites and also to cook more than 2 items simultaneously?)</string>
	
	<string name="in_app_billing_initialising">Initialising In App Billing.</string>
	<string name="in_app_billing_purchasing">Purchasing premium version.  Thank you!</string>
	<string name="please_wait">Please wait...</string>
	<string name="skinflint">I\'ll pay later, I promise</string>
	
	<string name="oops_no">Oops, no</string>
	<string name="discard">Discard</string>
	
	<string name="default_finish_time">Default finish time:</string>
	<string name="thirty_minutes_from_now">30 minutes from now</string>
	<string name="one_hour_from_now">1 hour from now</string>
	<string name="as_soon_as_possible">As soon as possible</string>
	<string name="display_items_that_take_too_long">Display items that take too long</string>
	<string name="save_settings">Save Settings</string>
	
	<string name="about_text">Hello!\nHow\'re you?\nI hope you\'re having a jolly nice day.\n\nI\'m very glad you decided to download Cooking Scheduler.\nThis nifty little app was written by Amy Phillips in many teeny tiny precious bits of spare time.\n\nPlease email any problems, questions, offers of help, bags of swag or suggestions to cooking@thinkysaurus.com</string>
	<string name="send_email">Send Email</string>
	<string name="launch_website">Launch website</string>
	
	<string name="when_to_finish">When would you like to finish cooking?</string>
	<string name="set">Set</string>
	<string name="reset_to_default_time">Default finish time</string>
	<string name="manual_finish_time">Manual finish time:</string>
	
	<string name="choose_parse_title">Choose a recipe to add</string>
	<string name="choose_parse_text">Enter the URL for a recipe to parse</string>
	<string name="parse">Download and parse</string>
	<string name="parsing_page">Parsing recipe at %1$s.</string>
	<string name="parsed_page">Found recipe %1$s.</string>
	<string name="failed_download_page">Failed to download recipe from %1$s.</string>
	<string name="failed_parse_page">Failed to parse recipe at %1$s.</string>
	<string name="failed_parse_title">Whoops</string>
	<string name="failed_parse_button">Report to developer</string>
	<string name="email_developer">Email developer with details</string>
	<string name="importing_recipe">Importing recipe</string>
	<string name="downloading_recipe">Downloading recipe from %1$s</string>
	<string name="parsing_recipe">Parsing recipe: %1$s</string>
	
	<string name="cooking_scheduler_website">http://www.thinkysaurus.com/cooking.html</string>
	<string name="crash_toast_text">Whoops - something has gone wrong!  I\'m very sorry and am sending an email crash report to Amy so she can fix it for you.  If you\'re offered a choice of applications, please choose your favourite email client.</string>
    <string name="needs_accounts_permissions">You need to allow accounts permissions to buy stuff</string>

</resources>