<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/finishTimeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/default_finish_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioFinishTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/finishTimeHeader" >

        <RadioButton
            android:id="@+id/radio30minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/thirty_minutes_from_now" />

        <RadioButton
            android:id="@+id/radio1hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_hour_from_now" />

        <RadioButton
            android:id="@+id/radioasap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/as_soon_as_possible" />
    </RadioGroup>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="OnSaveSettings"
        android:text="@string/save_settings" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="OnCancel"
        android:text="@string/cancel" />

    <CheckBox
        android:id="@+id/displayItemsThatTakeTooLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radioFinishTime"
        android:text="@string/display_items_that_take_too_long" />

</RelativeLayout>