<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/CurrentStepHeader"
        android:layout_alignParentLeft="true" >
    </ListView>

    <TextView
        android:id="@+id/disabledItemsWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button01"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:onClick="onDisabledItemsWarningClicked"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="startCooking"
        android:text="@string/start_cooking" />

    <Button
        android:id="@+id/finishTime"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="showFinishTimeDialog" />

    <TextView
        android:id="@+id/CurrentStepHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/Button01"
        android:layout_alignParentLeft="true"
        android:text="@string/finish_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>